--- a/src/main/resources/view/Css/Item.css
+++ b/src/main/resources/view/Css/Item.css
@@ -1,10 +1,9 @@
-#tblCustomer {
+#tblItem{
     -fx-background-color: transparent;
 }
 
-
 table-view {
-   -fx-background-color: transparent;
+    -fx-background-color: transparent;
 }
 
 .table-view:focused {
@@ -68,5 +67,3 @@ table-view {
 .table-view > .virtual-flow > .scroll-bar > .decrement-button {
     -fx-opacity: 0;
 }
-
-
