--- a/src/main/resources/view/Supplier_form.fxml
+++ b/src/main/resources/view/Supplier_form.fxml
@@ -98,7 +98,7 @@
                   <Image url="@image/icons8-supplier-100.png" />
                </image>
             </ImageView>
-            <TableView fx:id="tblSupplier" layoutX="889.0" layoutY="144.0" prefHeight="456.0" prefWidth="614.0">
+            <TableView fx:id="tblSupplier" layoutX="889.0" layoutY="144.0" prefHeight="456.0" prefWidth="614.0" stylesheets="@Css/Supplier.css">
               <columns>
                 <TableColumn fx:id="colid" prefWidth="112.800048828125" text="Supplier_id" />
                   <TableColumn fx:id="colname" prefWidth="112.800048828125" text="Name" />
@@ -109,7 +109,7 @@
             </TableView>
             <Label layoutX="991.0" layoutY="99.0" text="Here is the Table View For Supplier" textFill="#fa3232">
                <font>
-                  <Font name="System Bold Italic" size="24.0" />
+                  <Font name="System Bold Italic" size="18.0" />
                </font>
             </Label>
             <JFXButton buttonType="RAISED" layoutX="1413.0" layoutY="15.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="84.0" style="-fx-background-color: #7bed9f; -fx-background-radius: 40;" text="         Home" textFill="#0c0d0d">
