--- a/src/main/resources/view/employee_form.fxml
+++ b/src/main/resources/view/employee_form.fxml
@@ -88,13 +88,13 @@
                   <Image url="@image/icons8-employee-64.png" />
                </image>
             </ImageView>
-            <TableView fx:id="tblEmployee" layoutX="850.0" layoutY="125.0" prefHeight="448.0" prefWidth="626.0">
+            <TableView fx:id="tblEmployee" layoutX="850.0" layoutY="118.0" prefHeight="455.0" prefWidth="610.0" stylesheets="@Css/Employee.css">
               <columns>
                 <TableColumn fx:id="colid" prefWidth="150.4000244140625" text="Employee_id" />
                 <TableColumn minWidth="0.0" prefWidth="0.0" text="C2" />
                   <TableColumn fx:id="colName" prefWidth="150.4000244140625" text="Name" />
                   <TableColumn fx:id="colAddress" prefWidth="150.4000244140625" text="Address" />
-                  <TableColumn fx:id="colTel" prefWidth="150.4000244140625" text="Telephone" />
+                  <TableColumn fx:id="colTel" prefWidth="156.00009765624998" text="Telephone" />
               </columns>
             </TableView>
             <Label layoutX="1017.0" layoutY="67.0" text="Here is the table View for Employees" textFill="#fc3062">
