--- a/src/main/resources/view/placeOrder_form.fxml
+++ b/src/main/resources/view/placeOrder_form.fxml
@@ -168,7 +168,7 @@
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font></Label>
-                  <TableView fx:id="tblPlaceOrder" layoutX="74.0" layoutY="386.0" prefHeight="300.0" prefWidth="1007.0">
+                  <TableView fx:id="tblPlaceOrder" layoutX="74.0" layoutY="386.0" prefHeight="300.0" prefWidth="1007.0" stylesheets="@Css/PlaceOrder.css">
                     <columns>
                       <TableColumn fx:id="colCode" prefWidth="123.199951171875" text="Code" />
                       <TableColumn minWidth="0.0" prefWidth="0.0" text="C2" />
