--- a/src/main/resources/view/employee_form.fxml
+++ b/src/main/resources/view/employee_form.fxml
@@ -102,7 +102,7 @@
                   <Font name="System Bold Italic" size="18.0" />
                </font>
             </Label>
-            <JFXButton buttonType="RAISED" layoutX="1389.0" layoutY="14.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="94.0" style="-fx-background-color: #7bed9f; -fx-background-radius: 30;" text="      Home" textFill="#0d0d0d">
+            <JFXButton buttonType="RAISED" layoutX="1389.0" layoutY="14.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="94.0" style="-fx-background-color: #01a3a4; -fx-background-radius: 30;" text="      Home" textFill="#0d0d0d">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
