--- a/src/main/resources/view/report_form.fxml
+++ b/src/main/resources/view/report_form.fxml
@@ -3,7 +3,6 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -11,29 +10,15 @@
 
 <AnchorPane fx:id="rootNode" prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.ReportFormController">
    <children>
-      <AnchorPane prefHeight="650.0" prefWidth="1295.0" style="-fx-background-color: #d2dae2;">
+      <AnchorPane prefHeight="650.0" prefWidth="1295.0" style="-fx-background-color: #c8d6e5;">
          <children>
-            <ImageView fitHeight="389.0" fitWidth="366.0" layoutX="22.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@image/500_F_112921427_l8VWy8yvbcdqjicMJYF0u2vG3YDpZmiA.jpg" />
-               </image>
-            </ImageView>
-            <Label layoutX="605.0" layoutY="14.0" prefHeight="35.0" prefWidth="415.0" style="-fx-background-color: #05c46b; -fx-background-radius: 40;" text="                     Manage Report">
+            <AnchorPane layoutX="433.0" layoutY="114.0" prefHeight="490.0" prefWidth="842.0" style="-fx-background-color: #a4b0be; -fx-background-radius: 80;" />
+            <Label layoutX="457.0" layoutY="14.0" prefHeight="35.0" prefWidth="415.0" style="-fx-background-color: #05c46b; -fx-background-radius: 40;" text="                     Manage Report">
                <font>
                   <Font name="System Bold Italic" size="24.0" />
                </font>
             </Label>
-            <TextField layoutX="41.0" layoutY="18.0" prefHeight="26.0" prefWidth="270.0" text="Search Something here...">
-               <font>
-                  <Font size="11.0" />
-               </font>
-            </TextField>
-            <ImageView layoutX="279.0" layoutY="19.0">
-               <image>
-                  <Image url="@image/icons8-search-24.png" />
-               </image>
-            </ImageView>
-            <JFXButton buttonType="RAISED" layoutX="1189.0" layoutY="14.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="84.0" style="-fx-background-color: #7bed9f; -fx-background-radius: 40;" text="       Home" textFill="#0f0f10">
+            <JFXButton buttonType="RAISED" layoutX="1189.0" layoutY="14.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="84.0" style="-fx-background-color: #01a3a4; -fx-background-radius: 40;" text="       Home" textFill="#0f0f10">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
@@ -43,104 +28,109 @@
                   <Image url="@image/icons8-home-50.png" />
                </image>
             </ImageView>
-            <JFXButton buttonType="RAISED" layoutX="463.0" layoutY="104.0" onAction="#printEmployeeAttendanceReport" prefHeight="119.0" prefWidth="250.0" style="-fx-background-color: #70a1ff; -fx-background-radius: 60;">
+            <JFXButton buttonType="RAISED" layoutX="489.0" layoutY="154.0" onAction="#printEmployeeAttendanceReport" prefHeight="119.0" prefWidth="250.0" style="-fx-background-color: #70a1ff; -fx-background-radius: 60;" text="Button">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </JFXButton>
-            <ImageView fitHeight="46.0" fitWidth="68.0" layoutX="553.0" layoutY="144.0">
+            <ImageView fitHeight="46.0" fitWidth="68.0" layoutX="580.0" layoutY="200.0">
                <image>
                   <Image url="@image/icons8-list-100.png" />
                </image>
             </ImageView>
-            <Label layoutX="538.0" layoutY="114.0" text="Print Employee" textFill="#050505">
+            <Label layoutX="564.0" layoutY="167.0" text="Print Employee" textFill="#050505">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <Label layoutX="525.0" layoutY="134.0" text="Attendance Report" textFill="#0b0b0b">
+            <Label layoutX="552.0" layoutY="187.0" text="Attendance Report" textFill="#0b0b0b">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <JFXButton buttonType="RAISED" layoutX="711.0" layoutY="285.0" onAction="#printItemReportOnAction" prefHeight="119.0" prefWidth="250.0" style="-fx-background-color: #70a1ff; -fx-background-radius: 60;">
+            <JFXButton buttonType="RAISED" layoutX="733.0" layoutY="287.0" onAction="#printItemReportOnAction" prefHeight="119.0" prefWidth="250.0" style="-fx-background-color: #70a1ff; -fx-background-radius: 60;">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </JFXButton>
-            <ImageView fitHeight="46.0" fitWidth="68.0" layoutX="802.0" layoutY="327.0">
+            <ImageView fitHeight="46.0" fitWidth="68.0" layoutX="824.0" layoutY="324.0">
                <image>
                   <Image url="@image/icons8-list-100.png" />
                </image>
             </ImageView>
-            <Label layoutX="778.0" layoutY="287.0" text="Print Item Details" textFill="#050505">
+            <Label layoutX="800.0" layoutY="287.0" text="Print Item Details" textFill="#050505">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <Label layoutX="813.0" layoutY="307.0" text="Report" textFill="#0b0b0b">
+            <Label layoutX="835.0" layoutY="307.0" text="Report" textFill="#0b0b0b">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <ImageView fitHeight="46.0" fitWidth="41.0" layoutX="1040.0" layoutY="18.0">
+            <ImageView fitHeight="46.0" fitWidth="41.0" layoutX="881.0" layoutY="9.0">
                <image>
                   <Image url="@image/icons8-items-64.png" />
                </image>
             </ImageView>
-            <JFXButton buttonType="RAISED" layoutX="462.0" layoutY="474.0" onAction="#btn3OnAction" prefHeight="119.0" prefWidth="249.0" style="-fx-background-color: #70a1ff; -fx-background-radius: 60;" text="Button">
+            <JFXButton buttonType="RAISED" layoutX="496.0" layoutY="420.0" onAction="#btn3OnAction" prefHeight="119.0" prefWidth="249.0" style="-fx-background-color: #70a1ff; -fx-background-radius: 60;" text="Button">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </JFXButton>
-            <ImageView fitHeight="46.0" fitWidth="68.0" layoutX="554.0" layoutY="520.0">
+            <ImageView fitHeight="46.0" fitWidth="68.0" layoutX="587.0" layoutY="468.0">
                <image>
                   <Image url="@image/icons8-list-100.png" />
                </image>
             </ImageView>
-            <Label layoutX="526.0" layoutY="491.0" text="Print Order Details" textFill="#050505">
+            <Label layoutX="559.0" layoutY="442.0" text="Print Order Details" textFill="#050505">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <JFXButton buttonType="RAISED" layoutX="997.0" layoutY="107.0" onAction="#btnSupplierDetailOnAction" prefHeight="119.0" prefWidth="249.0" style="-fx-background-color: #70a1ff; -fx-background-radius: 60;" text="Button">
+            <JFXButton buttonType="RAISED" layoutX="977.0" layoutY="154.0" onAction="#btnSupplierDetailOnAction" prefHeight="119.0" prefWidth="249.0" style="-fx-background-color: #70a1ff; -fx-background-radius: 60;" text="Button">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="997.0" layoutY="474.0" onAction="#printMaterialDetailOnAction" prefHeight="119.0" prefWidth="249.0" style="-fx-background-color: #70a1ff; -fx-background-radius: 60;">
+            <JFXButton buttonType="RAISED" layoutX="974.0" layoutY="431.0" onAction="#btn3OnAction" prefHeight="119.0" prefWidth="249.0" style="-fx-background-color: #70a1ff; -fx-background-radius: 60;">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </JFXButton>
-            <Label layoutX="1080.0" layoutY="114.0" text="Print Supplier" textFill="#050505">
+            <Label layoutX="1056.0" layoutY="167.0" text="Print Supplier" textFill="#050505">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <Label layoutX="1102.0" layoutY="134.0" text="Detail" textFill="#0b0b0b">
+            <Label layoutX="1079.0" layoutY="187.0" text="Detail" textFill="#0b0b0b">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <ImageView fitHeight="46.0" fitWidth="68.0" layoutX="1088.0" layoutY="154.0">
+            <ImageView fitHeight="46.0" fitWidth="68.0" layoutX="1068.0" layoutY="200.0">
                <image>
                   <Image url="@image/icons8-list-100.png" />
                </image>
             </ImageView>
-            <Label layoutX="1080.0" layoutY="491.0" text="Print Material" textFill="#050505">
+            <Label layoutX="1053.0" layoutY="452.0" text="Print Material" textFill="#050505">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <Label layoutX="1102.0" layoutY="510.0" text="Detail" textFill="#050505">
+            <Label layoutX="1079.0" layoutY="470.0" text="Detail" textFill="#050505">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <ImageView fitHeight="46.0" fitWidth="68.0" layoutX="1088.0" layoutY="520.0">
+            <ImageView fitHeight="46.0" fitWidth="68.0" layoutX="1065.0" layoutY="480.0">
                <image>
                   <Image url="@image/icons8-list-100.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="420.0" fitWidth="424.0" layoutY="130.0">
+               <image>
+                  <Image url="@image/AdobeStock_501765440-1024px.jpg" />
                </image>
             </ImageView>
          </children>
