--- a/src/main/resources/view/Report/OrderDetail.jrxml
+++ b/src/main/resources/view/Report/OrderDetail.jrxml
@@ -4,7 +4,7 @@
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="New Data Adapter (9)"/>
 	<queryString language="SQL">
-		<![CDATA[SELECT * FROM order_detail]]>
+		<![CDATA[SELECT * FROM order_detail ORDER BY or_id DESC LIMIT 1]]>
 	</queryString>
 	<field name="or_id" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.name" value="or_id"/>
