--- a/src/main/resources/view/Attendance_form.fxml
+++ b/src/main/resources/view/Attendance_form.fxml
@@ -29,7 +29,7 @@
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <Label layoutX="39.0" layoutY="149.0" text="Employee name">
+                  <Label layoutX="43.0" layoutY="148.0" text=" name">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
