--- a/src/main/resources/view/Supplier_form.fxml
+++ b/src/main/resources/view/Supplier_form.fxml
@@ -30,17 +30,17 @@
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Label>
-                  <Label layoutX="37.0" layoutY="191.0" text="Supplier Name">
+                  <Label layoutX="45.0" layoutY="190.0" text="          Name">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <Label layoutX="28.0" layoutY="275.0" text="Supplier address">
+                  <Label layoutX="28.0" layoutY="275.0" text="             address">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <Label layoutX="34.0" layoutY="347.0" text="Supplier Email">
+                  <Label layoutX="34.0" layoutY="347.0" text="             Email">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -51,7 +51,7 @@
                      </font>
                   </Label>
                   <TextField fx:id="txttype" layoutX="153.0" layoutY="409.0" prefHeight="26.0" prefWidth="214.0" style="-fx-background-radius: 30;" />
-                  <Label layoutX="39.0" layoutY="414.0" text="Supplier Type">
+                  <Label layoutX="39.0" layoutY="414.0" text="            Type">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
