--- a/src/main/resources/view/rowMaterial_form.fxml
+++ b/src/main/resources/view/rowMaterial_form.fxml
@@ -31,7 +31,7 @@
                   <TextField fx:id="txtname" layoutX="111.0" layoutY="199.0" prefHeight="26.0" prefWidth="223.0" style="-fx-background-radius: 30;" />
                   <TextField fx:id="txtunitPrice" layoutX="111.0" layoutY="284.0" prefHeight="26.0" prefWidth="223.0" style="-fx-background-radius: 30;" />
                   <TextField fx:id="txtqty" layoutX="111.0" layoutY="371.0" prefHeight="26.0" prefWidth="223.0" style="-fx-background-radius: 30;" />
-                  <Label layoutX="11.0" layoutY="203.0" text="Material Name">
+                  <Label layoutX="35.0" layoutY="203.0" text=" Name">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
