--- a/src/main/resources/view/Dashboard_form.fxml
+++ b/src/main/resources/view/Dashboard_form.fxml
@@ -116,8 +116,8 @@
                   <Image url="@image/icons8-log-out-48.png" />
                </image>
             </ImageView>
-            <AnchorPane layoutX="116.0" layoutY="20.0" prefHeight="57.0" prefWidth="55.0" style="-fx-background-color: #ffffff;" />
-            <ImageView layoutX="119.0" layoutY="24.0">
+            <AnchorPane layoutX="88.0" layoutY="20.0" prefHeight="57.0" prefWidth="55.0" style="-fx-background-color: #ffffff;" />
+            <ImageView layoutX="91.0" layoutY="24.0">
                <image>
                   <Image url="@image/icons8-user-50%20(1).png" />
                </image>
@@ -137,9 +137,9 @@
             </ImageView>
          </children>
       </AnchorPane>
-      <Label layoutX="239.0" layoutY="15.0" prefHeight="18.0" prefWidth="129.0" text="   Welcome Back !!">
+      <Label layoutX="254.0" layoutY="8.0" prefHeight="35.0" prefWidth="246.0" text="   Welcome Back !!" textFill="#030202">
          <font>
-            <Font name="System Bold" size="14.0" />
+            <Font name="System Bold" size="24.0" />
          </font>
       </Label>
       <TextField layoutX="690.0" layoutY="25.0" prefHeight="26.0" prefWidth="446.0" promptText="Search something here...." />
@@ -148,19 +148,19 @@
             <Image url="@image/icons8-search-24.png" />
          </image>
       </ImageView>
-      <AnchorPane fx:id="dashRoot2" layoutX="254.0" layoutY="75.0" prefHeight="620.0" prefWidth="1254.0" style="-fx-background-color: #ced6e0;">
+      <AnchorPane fx:id="dashRoot2" layoutX="254.0" layoutY="75.0" prefHeight="620.0" prefWidth="1254.0" style="-fx-background-color: #786fa6;">
          <children>
-            <Label layoutX="15.0" layoutY="14.0" text="Dashboard">
+            <Label layoutX="15.0" layoutY="14.0" text="Dashboard" textFill="#201b1b">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="34.0" text="information about your current business process....">
+            <Label layoutX="14.0" layoutY="34.0" text="information about your current business process...." textFill="#0b0000">
                <font>
                   <Font size="10.0" />
                </font>
             </Label>
-            <AnchorPane layoutX="993.0" layoutY="12.0" prefHeight="43.0" prefWidth="222.0" style="-fx-background-color: #a4b0be; -fx-background-radius: 70;">
+            <AnchorPane layoutX="993.0" layoutY="12.0" prefHeight="43.0" prefWidth="222.0" style="-fx-background-color: #ecf0f1; -fx-background-radius: 70;">
                <children>
                   <ImageView fitHeight="27.0" fitWidth="29.0" layoutX="19.0" layoutY="10.0">
                      <image>
@@ -174,7 +174,7 @@
                   </Label>
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="418.0" layoutY="128.0" prefHeight="479.0" prefWidth="816.0" style="-fx-background-color: #95afc0; -fx-background-radius: 60;" />
+            <AnchorPane layoutX="418.0" layoutY="128.0" prefHeight="479.0" prefWidth="816.0" style="-fx-background-color: #dfe4ea; -fx-background-radius: 60;" />
             <BarChart fx:id="BarChart" layoutX="441.0" layoutY="174.0" prefHeight="418.0" prefWidth="742.0" stylesheets="@Css/style.css">
               <xAxis>
                 <CategoryAxis side="BOTTOM" />
@@ -183,7 +183,7 @@
                 <NumberAxis side="LEFT" />
               </yAxis>
             </BarChart>
-            <AnchorPane layoutX="418.0" layoutY="13.0" prefHeight="43.0" prefWidth="222.0" style="-fx-background-color: #a4b0be; -fx-background-radius: 70;" />
+            <AnchorPane layoutX="418.0" layoutY="13.0" prefHeight="43.0" prefWidth="222.0" style="-fx-background-color: #ecf0f1; -fx-background-radius: 70;" />
             <Label fx:id="lbltime" layoutX="493.0" layoutY="17.0" prefHeight="35.0" prefWidth="130.0">
                <font>
                   <Font name="System Bold Italic" size="24.0" />
@@ -244,13 +244,13 @@
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
+                  <ImageView fitHeight="35.0" fitWidth="50.0" layoutX="19.0" layoutY="24.0">
+                     <image>
+                        <Image url="@image/icons8-supplier-48.png" />
+                     </image>
+                  </ImageView>
                </children>
             </AnchorPane>
-            <ImageView fitHeight="43.0" fitWidth="55.0" layoutX="40.0" layoutY="463.0">
-               <image>
-                  <Image url="@image/icons8-supplier-48.png" />
-               </image>
-            </ImageView>
          </children>
       </AnchorPane>
       <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="1360.0" layoutY="14.0">
