--- a/src/main/resources/view/placeOrder_form.fxml
+++ b/src/main/resources/view/placeOrder_form.fxml
@@ -25,18 +25,18 @@
                               <Font name="System Bold" size="18.0" />
                            </font>
                         </Label>
-                        <Label fx:id="lblUnitPrice" layoutX="163.0" layoutY="121.0" prefHeight="35.0" prefWidth="142.0" textFill="#6d214f">
+                        <Label fx:id="lblUnitPrice" layoutX="163.0" layoutY="121.0" prefHeight="35.0" prefWidth="142.0" textFill="#c0392b">
                            <font>
                               <Font name="System Bold" size="24.0" />
                            </font>
                         </Label>
-                        <JFXComboBox fx:id="cmbItemCode" layoutX="163.0" layoutY="20.0" onAction="#cmbItemCodeOnAction" prefHeight="26.0" prefWidth="168.0" />
+                        <JFXComboBox fx:id="cmbItemCode" focusColor="#c0392b" layoutX="163.0" layoutY="20.0" onAction="#cmbItemCodeOnAction" prefHeight="26.0" prefWidth="168.0" />
                         <Label layoutX="30.0" layoutY="76.0" text="Description :">
                            <font>
                               <Font name="System Bold" size="18.0" />
                            </font>
                         </Label>
-                        <Label fx:id="lblDescription" layoutX="163.0" layoutY="72.0" prefHeight="26.0" prefWidth="118.0" textFill="#6d214f">
+                        <Label fx:id="lblDescription" layoutX="163.0" layoutY="72.0" prefHeight="26.0" prefWidth="118.0" textFill="#c0392b">
                            <font>
                               <Font name="System Bold" size="24.0" />
                            </font>
@@ -51,7 +51,7 @@
                               <Font name="System Bold" size="18.0" />
                            </font>
                         </Label>
-                        <Label fx:id="lblQty" layoutX="163.0" layoutY="172.0" prefHeight="35.0" prefWidth="142.0" textFill="#6d214f">
+                        <Label fx:id="lblQty" layoutX="163.0" layoutY="172.0" prefHeight="35.0" prefWidth="142.0" textFill="#c0392b">
                            <font>
                               <Font name="System Bold" size="24.0" />
                            </font>
@@ -65,7 +65,7 @@
                               <Font name="System Bold" size="18.0" />
                            </font>
                         </Label>
-                        <Label fx:id="lblOrderId" layoutX="132.0" layoutY="10.0" prefHeight="26.0" prefWidth="118.0" textFill="#6d214f">
+                        <Label fx:id="lblOrderId" layoutX="132.0" layoutY="10.0" prefHeight="26.0" prefWidth="118.0" textFill="#c0392b">
                            <font>
                               <Font name="System Bold" size="24.0" />
                            </font>
@@ -75,7 +75,7 @@
                               <Font name="System Bold" size="18.0" />
                            </font>
                         </Label>
-                        <Label fx:id="lblCustomerMail" layoutX="199.0" layoutY="226.0" prefHeight="35.0" prefWidth="221.0" textFill="#6d214f">
+                        <Label fx:id="lblCustomerMail" layoutX="199.0" layoutY="226.0" prefHeight="35.0" prefWidth="221.0" textFill="#c0392b">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
@@ -85,7 +85,7 @@
                               <Font name="System Bold" size="18.0" />
                            </font>
                         </Label>
-                        <Label fx:id="lblOrderDate" layoutX="160.0" layoutY="61.0" prefHeight="26.0" prefWidth="142.0" textFill="#6d214f">
+                        <Label fx:id="lblOrderDate" layoutX="160.0" layoutY="61.0" prefHeight="26.0" prefWidth="142.0" textFill="#c0392b">
                            <font>
                               <Font name="System Bold" size="24.0" />
                            </font>
@@ -114,7 +114,7 @@
                               <Font name="System Bold" size="18.0" />
                            </font>
                         </Label>
-                        <Label fx:id="lblCustomerName" layoutX="199.0" layoutY="174.0" prefHeight="26.0" prefWidth="142.0" textFill="#6d214f">
+                        <Label fx:id="lblCustomerName" layoutX="199.0" layoutY="174.0" prefHeight="26.0" prefWidth="142.0" textFill="#c0392b">
                            <font>
                               <Font name="System Bold" size="24.0" />
                            </font>
