--- a/src/main/resources/view/customer_form.fxml
+++ b/src/main/resources/view/customer_form.fxml
@@ -19,7 +19,7 @@
                   <Image url="@image/R.png" />
                </image>
             </ImageView>
-            <Label layoutX="384.0" layoutY="21.0" prefHeight="35.0" prefWidth="482.0" style="-fx-background-color: #6c5ce7; -fx-background-radius: 20;" text="                      Manage Customer" textFill="#dfe6e9">
+            <Label layoutX="555.0" layoutY="15.0" prefHeight="35.0" prefWidth="482.0" style="-fx-background-color: #0097e6; -fx-background-radius: 20;" text="                      Manage Customer" textFill="#dfe6e9">
                <font>
                   <Font name="System Bold Italic" size="24.0" />
                </font>
@@ -73,7 +73,7 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <ImageView fitHeight="55.0" fitWidth="56.0" layoutX="884.0" layoutY="12.0">
+            <ImageView fitHeight="35.0" fitWidth="34.0" layoutX="1071.0" layoutY="16.0">
                <image>
                   <Image url="@image/icons8-customer-50.png" />
                </image>
@@ -93,11 +93,6 @@
                   <TableColumn fx:id="colCustomerTel" prefWidth="131.199951171875" text="Telephone" />
               </columns>
             </TableView>
-            <Label layoutX="1039.0" layoutY="67.0" text="Here is the table View For Customer" textFill="#19249e">
-               <font>
-                  <Font name="System Bold Italic" size="18.0" />
-               </font>
-            </Label>
             <JFXButton buttonType="RAISED" layoutX="1395.0" layoutY="33.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="89.0" style="-fx-background-color: #01a3a4; -fx-background-radius: 20;" text="        Home">
                <font>
                   <Font name="System Bold" size="12.0" />
