--- a/src/main/resources/view/Attendance_form.fxml
+++ b/src/main/resources/view/Attendance_form.fxml
@@ -93,7 +93,7 @@
                   </ImageView>
                </children>
             </AnchorPane>
-            <Label layoutX="378.0" layoutY="19.0" prefHeight="35.0" prefWidth="351.0" style="-fx-background-color: #70a1ff; -fx-background-radius: 40;" text="           Manage Attendance                ">
+            <Label layoutX="502.0" layoutY="19.0" prefHeight="35.0" prefWidth="503.0" style="-fx-background-color: #0097e6; -fx-background-radius: 40;" text="                    Manage Attendance " textFill="WHITE">
                <font>
                   <Font name="System Bold Italic" size="24.0" />
                </font>
@@ -132,7 +132,7 @@
                   <TableColumn fx:id="colStatus" prefWidth="141.59995117187498" text="Status" />
               </columns>
             </TableView>
-            <ImageView fitHeight="35.0" fitWidth="45.0" layoutX="750.0" layoutY="19.0">
+            <ImageView fitHeight="35.0" fitWidth="45.0" layoutX="1020.0" layoutY="19.0">
                <image>
                   <Image url="@image/icons8-items-64.png" />
                </image>
@@ -143,11 +143,6 @@
                   <Image url="@image/icons8-search-24.png" />
                </image>
             </ImageView>
-            <Label layoutX="985.0" layoutY="78.0" text="Here is the table view For Attendance Details" textFill="#ec2c62">
-               <font>
-                  <Font name="System Bold Italic" size="18.0" />
-               </font>
-            </Label>
             <ImageView fitHeight="20.0" fitWidth="24.0" layoutX="1404.0" layoutY="27.0">
                <image>
                   <Image url="@image/icons8-home-50.png" />
