--- a/src/main/resources/view/Report/CustomerWithOrders.jrxml
+++ b/src/main/resources/view/Report/CustomerWithOrders.jrxml
@@ -47,11 +47,11 @@ on orders.cust_id= customer.cust_id]]>
 		<band/>
 	</background>
 	<title>
-		<band height="72">
+		<band height="98">
 			<frame>
-				<reportElement mode="Opaque" x="-20" y="-20" width="595" height="92" backcolor="#006699" uuid="85ed0f7f-f334-4980-b4b6-375f1b474808"/>
+				<reportElement mode="Opaque" x="-20" y="-20" width="595" height="118" backcolor="#006699" uuid="85ed0f7f-f334-4980-b4b6-375f1b474808"/>
 				<staticText>
-					<reportElement x="20" y="20" width="234" height="43" forecolor="#FFFFFF" uuid="e35483bb-bbbd-4fc0-a029-7a87b1c70c01"/>
+					<reportElement x="0" y="70" width="234" height="43" forecolor="#FFFFFF" uuid="e35483bb-bbbd-4fc0-a029-7a87b1c70c01"/>
 					<textElement>
 						<font size="34" isBold="true"/>
 					</textElement>
@@ -64,6 +64,10 @@ on orders.cust_id= customer.cust_id]]>
 					</textElement>
 					<text><![CDATA[Liyo Garment              300/109                         Matugama Road      Baduraliya]]></text>
 				</staticText>
+				<image>
+					<reportElement x="10" y="10" width="60" height="60" uuid="959165b0-f52c-4669-94a8-cc963c843565"/>
+					<imageExpression><![CDATA["C:/Users/thisu/Downloads/modern-company-logo-design-vector.jpg"]]></imageExpression>
+				</image>
 			</frame>
 		</band>
 	</title>
@@ -176,7 +180,7 @@ on orders.cust_id= customer.cust_id]]>
 				<reportElement x="330" y="0" width="140" height="19" uuid="b2696a56-1c61-41a1-bb4d-4303bfbc87be">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="ead0c2ec-4103-4464-9a82-2b50d2392066"/>
 				</reportElement>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Left">
 					<font size="14"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{address}]]></textFieldExpression>
