--- a/src/main/resources/view/Report/EmployeeAttendance.jrxml
+++ b/src/main/resources/view/Report/EmployeeAttendance.jrxml
@@ -35,11 +35,11 @@
 		<band/>
 	</background>
 	<title>
-		<band height="72">
+		<band height="105">
 			<frame>
-				<reportElement mode="Opaque" x="-20" y="-20" width="595" height="92" backcolor="#006699" uuid="44ecf9a9-da2e-4c41-83ca-9401f45f91cd"/>
+				<reportElement mode="Opaque" x="-20" y="-20" width="595" height="125" backcolor="#006699" uuid="44ecf9a9-da2e-4c41-83ca-9401f45f91cd"/>
 				<staticText>
-					<reportElement x="20" y="20" width="340" height="43" forecolor="#FFFFFF" uuid="10177832-fb24-49fc-93f8-9e105482e6c3"/>
+					<reportElement x="0" y="80" width="340" height="43" forecolor="#FFFFFF" uuid="10177832-fb24-49fc-93f8-9e105482e6c3"/>
 					<textElement>
 						<font size="22" isBold="true"/>
 					</textElement>
@@ -52,6 +52,10 @@
 					</textElement>
 					<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 				</textField>
+				<image>
+					<reportElement x="10" y="10" width="70" height="60" uuid="2a5c0976-9345-4e1a-9f69-4e0d21a9a790"/>
+					<imageExpression><![CDATA["C:/Users/thisu/Downloads/modern-company-logo-design-vector.jpg"]]></imageExpression>
+				</image>
 			</frame>
 		</band>
 	</title>
