--- a/src/main/resources/view/Report/Supplier.jrxml
+++ b/src/main/resources/view/Report/Supplier.jrxml
@@ -3,6 +3,33 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Blank_A4" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="9f0c7d11-6a80-41cc-8ff5-3c4263c30170">
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="New Data Adapter (9)"/>
+	<style name="Table_TH" mode="Opaque" backcolor="#F0F8FF">
+		<box>
+			<pen lineWidth="0.5" lineColor="#000000"/>
+			<topPen lineWidth="0.5" lineColor="#000000"/>
+			<leftPen lineWidth="0.5" lineColor="#000000"/>
+			<bottomPen lineWidth="0.5" lineColor="#000000"/>
+			<rightPen lineWidth="0.5" lineColor="#000000"/>
+		</box>
+	</style>
+	<style name="Table_CH" mode="Opaque" backcolor="#BFE1FF">
+		<box>
+			<pen lineWidth="0.5" lineColor="#000000"/>
+			<topPen lineWidth="0.5" lineColor="#000000"/>
+			<leftPen lineWidth="0.5" lineColor="#000000"/>
+			<bottomPen lineWidth="0.5" lineColor="#000000"/>
+			<rightPen lineWidth="0.5" lineColor="#000000"/>
+		</box>
+	</style>
+	<style name="Table_TD" mode="Opaque" backcolor="#FFFFFF">
+		<box>
+			<pen lineWidth="0.5" lineColor="#000000"/>
+			<topPen lineWidth="0.5" lineColor="#000000"/>
+			<leftPen lineWidth="0.5" lineColor="#000000"/>
+			<bottomPen lineWidth="0.5" lineColor="#000000"/>
+			<rightPen lineWidth="0.5" lineColor="#000000"/>
+		</box>
+	</style>
 	<queryString language="SQL">
 		<![CDATA[SELECT * FROM supplier]]>
 	</queryString>
@@ -35,9 +62,9 @@
 		<band height="1" splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="148" splitType="Stretch">
+		<band height="150" splitType="Stretch">
 			<staticText>
-				<reportElement x="-10" y="0" width="290" height="70" uuid="412c0fd2-95c7-469d-8cd4-fee47caa4610"/>
+				<reportElement x="-11" y="80" width="290" height="70" uuid="412c0fd2-95c7-469d-8cd4-fee47caa4610"/>
 				<textElement>
 					<font size="24" isBold="true" isItalic="true"/>
 				</textElement>
@@ -51,12 +78,16 @@
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="-10" y="80" width="230" height="68" uuid="d334833f-d834-4812-96b9-2bcb74860918"/>
+				<reportElement x="330" y="70" width="230" height="68" uuid="d334833f-d834-4812-96b9-2bcb74860918"/>
 				<textElement>
 					<font size="16" isBold="true" isItalic="true"/>
 				</textElement>
 				<text><![CDATA[NO 300/109 Matugama Road,        Baduraliya..]]></text>
 			</staticText>
+			<image>
+				<reportElement x="0" y="0" width="73" height="71" uuid="a7008397-5742-4539-8a1a-77ae7ef6a6ef"/>
+				<imageExpression><![CDATA["C:/Users/thisu/Downloads/modern-company-logo-design-vector.jpg"]]></imageExpression>
+			</image>
 		</band>
 	</title>
 	<columnHeader>
