--- a/src/main/resources/view/item_form.fxml
+++ b/src/main/resources/view/item_form.fxml
@@ -52,7 +52,7 @@
                   </Label>
                </children>
             </AnchorPane>
-            <Label layoutX="435.0" layoutY="22.0" prefHeight="35.0" prefWidth="437.0" style="-fx-background-color: #30336b; -fx-background-radius: 40;" text="                        Manage Item" textFill="#dff9fb">
+            <Label layoutX="570.0" layoutY="17.0" prefHeight="35.0" prefWidth="437.0" style="-fx-background-color: #0097e6; -fx-background-radius: 40;" text="                        Manage Item" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="24.0" />
                </font>
@@ -77,7 +77,7 @@
                   <Font size="11.0" />
                </font>
             </TextField>
-            <ImageView fitHeight="42.0" fitWidth="48.0" layoutX="890.0" layoutY="19.0">
+            <ImageView fitHeight="35.0" fitWidth="41.0" layoutX="1019.0" layoutY="18.0">
                <image>
                   <Image url="@image/icons8-items-64.png" />
                </image>
@@ -96,11 +96,6 @@
                   <TableColumn fx:id="colUnitPrice" prefWidth="150.40008544921875" text="UnitPrice" />
               </columns>
             </TableView>
-            <Label layoutX="1048.0" layoutY="70.0" text="Here is the Table View For Items" textFill="#fc3030">
-               <font>
-                  <Font name="System Bold Italic" size="18.0" />
-               </font>
-            </Label>
             <JFXButton buttonType="RAISED" layoutX="1411.0" layoutY="17.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="81.0" style="-fx-background-color: #01a3a4; -fx-background-radius: 40;" text="      Home" textFill="#0a0a0b">
                <font>
                   <Font name="System Bold" size="11.0" />
