--- a/src/main/resources/view/placeOrder_form.fxml
+++ b/src/main/resources/view/placeOrder_form.fxml
@@ -149,7 +149,7 @@
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <Label layoutX="304.0" layoutY="14.0" prefHeight="42.0" prefWidth="506.0" style="-fx-background-color: #4a69bd; -fx-background-radius: 50;" text="                     Place Order Here" textFill="WHITE">
+                  <Label layoutX="304.0" layoutY="14.0" prefHeight="42.0" prefWidth="506.0" style="-fx-background-color: #0097e6; -fx-background-radius: 50;" text="                     Place Order Here" textFill="WHITE">
                      <font>
                         <Font name="System Bold Italic" size="24.0" />
                      </font>
