--- a/src/main/resources/view/report_form.fxml
+++ b/src/main/resources/view/report_form.fxml
@@ -13,7 +13,7 @@
       <AnchorPane prefHeight="650.0" prefWidth="1295.0" style="-fx-background-color: #c8d6e5;">
          <children>
             <AnchorPane layoutX="433.0" layoutY="114.0" prefHeight="490.0" prefWidth="842.0" style="-fx-background-color: #a4b0be; -fx-background-radius: 80;" />
-            <Label layoutX="457.0" layoutY="14.0" prefHeight="35.0" prefWidth="415.0" style="-fx-background-color: #05c46b; -fx-background-radius: 40;" text="                     Manage Report">
+            <Label layoutX="469.0" layoutY="14.0" prefHeight="35.0" prefWidth="415.0" style="-fx-background-color: #0097e6; -fx-background-radius: 40;" text="                     Manage Report" textFill="WHITE">
                <font>
                   <Font name="System Bold Italic" size="24.0" />
                </font>
@@ -68,7 +68,7 @@
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <ImageView fitHeight="46.0" fitWidth="41.0" layoutX="881.0" layoutY="9.0">
+            <ImageView fitHeight="35.0" fitWidth="39.0" layoutX="908.0" layoutY="14.0">
                <image>
                   <Image url="@image/icons8-items-64.png" />
                </image>
